Completed JP Morgan Advanced Software Engineering - All 5 tasks with Kafka listener and REST API